<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Route Calculator</string>
    <string name="app_name_abr">RC</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_search">Search</string>
    <string name="action_marker_title">Show Markers</string>
    <string name="action_save_title">Save</string>
    <string name="action_undo_title">Undo</string>
    <string name="action_clear_title">Clear</string>
    <string name="search_hint">Search...</string>
    <string name="search_location">Enter address</string>

    <string-array name="menu_items">
        <item>Home</item>
        <item>Point to Point</item>
        <item>Free Draw</item>
    </string-array>

</resources>
