<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- Search / will display always -->
    <item android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search"
        app:showAsAction="always"/>

    <!-- Marker -->
    <item android:id="@+id/action_marker"
        android:icon="@drawable/ic_marker"
        android:title="@string/action_marker_title"
        app:showAsAction="always" />

    <!-- save -->
    <item android:id="@+id/action_save"
        android:icon="@drawable/ic_action_save"
        android:title="@string/action_save_title"
        app:showAsAction="ifRoom" />

    <!-- Undo -->
    <item android:id="@+id/action_undo"
        android:icon="@drawable/ic_action_undo"
        android:title="@string/action_undo_title"
        app:showAsAction="always"/>

    <!-- Clear map features -->
    <item android:id="@+id/action_clear"
        android:title="@string/action_clear_title"
        android:icon="@drawable/ic_action_cancel"
        app:showAsAction="ifRoom"
        />

</menu>